src/App.css
*{
  background-color: black;
  color: whitesmoke;
  font-family: sans-serif, 'inter';
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
  text-decoration: none;
}


.container{
  display: flex;
}


.icons-text{
  display: flex;
  gap: 8px;
  align-items: center;
  fill: white;
}

.icons-text a{
 text-decoration: none;
 list-style-type: none;
}

.homelogo:hover{
  transform: scale(1.1); /* Increase size by 20% on hover */
  transition: transform 0.1s ease-in-out; /* Add smooth transition */
}


.logo-repo{
  font-family: 'Courier New', Courier, monospace;
  padding: 16px 16px;
}

.style-side-bar{
  position: fixed;
  overflow: visible;
  padding: 16px ;
  width: 250px;
  border-right: 1px solid rgb(48, 48, 48);
  display: flex;
  flex-direction: column;
  align-items: left;
}


.style-side-bar a{
  font-size: 16px;
  font-weight: 400;
  text-decoration: none;
  list-style-type: none
}

.style-side-bar li{
  list-style-type: none;
}


.side--bar-list-items{
  padding: 12px 16px;
}

.side--bar-list-items:hover{
  background-color: rgb(19, 18, 18);
  border-radius: 8px;
}



/* Profile Page */
.profile-container{
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 32px 64px;
  margin-left: 250px;

}


.profile-header-section{
  width: 100%;
  display: flex;
}

.top-nav-wrapper{
  display: flex;
  flex-direction: column;
  align-items: start;
  gap: 24px;
}

.img-section-edit{

  padding: 64px;
  margin-right: 16px;
}

.img-fit-container{
  display: flex;
  align-items: center;
  justify-content: center;
  width: 150px;
  height: 150px;
  border-radius: 50%;
}



.img-container-profile{
  width: 100%;
  border-radius: 50%;
}


.img-container-profile img{
  width: 100%;
  border-radius: 50%;
 object-fit: cover;
}




.wrap-profile-edit{
  display: flex;
  align-items: center;
  gap: 24px;
  height: fit-content;
}

.name-change h2{
  font-size: 20px;
  font-weight: 400;
}

.lump-edit{
  display: flex;
  gap: 8px;
  align-items: center;
  justify-content: center;
}



.btn-profile{
  padding: 8px 14px; 
  font-size: 14px;
  background-color: rgb(57, 57, 57);
  border-radius: 8px;
}

.btn-profile:hover{
  background-color: rgb(30, 30, 30);
}

.profile-count-edit{
  display: flex;
  gap: 24px;
}

.post-title{
  font-size: 14px;
  color: rgb(188, 188, 188);
}

.secondary-post-title{
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.bio-post p{
  font-size: 14px;
  line-height: 1.3;
}

.stories-img{
  display: flex;
  gap: 46px;
  align-items: stretch;
  overflow-x: hidden;
  overflow: hidden;
}


svg{
  width: 103;
  height: 290;
}


.img-stories{
  border-radius: 50%;
  width: 77px;
  height: 77px;
  background-color: #C3C3C3;
}

.sub-wrapper{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.ring-wrap{
  padding: 4px;
  border: 1px solid rgb(70, 70, 70);
  border-radius: 50%;
}

.sub-text{
  padding: 8px 0px;
  font-size: 12px;
}


.section-posts{
  width: 100%;
  border-top: 1px solid rgb(48, 48, 48);
  margin: 32px 0px;
}

.posts{
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 12px;
  gap: 64px;
  padding: 24px;
  color:rgb(70, 70, 70) ;
}

.profile-gallery{
  width: 100%;
  margin: 8px 0px;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 8px;
  
}

.first-img{
  flex: 1;
  background-color: rgb(70, 70, 70);
}

.img-container img{
  width: 100%;
  object-fit: fill;
}

